# sir_in_rust

./: .gitignore  Cargo.toml  README.md  plot.py
src/: analysis.rs  main.rs  model.rs
